# audio_unit_rust_demo

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  audiounits-debug-build  audiounits-package  audiounits-release-build  build-xcframeworks  generate-git-info  pristine  tidy
crates/cbindgen-bindgen/: Cargo.toml  build.rs  cbindgen.toml
crates/cbindgen-bindgen/src/: lib.rs
crates/mock_dsp_lib/: Cargo.toml  cbindgen.toml  hack_cbindgen_includes
crates/mock_dsp_lib/src/: lib.rs
macos/: export_options.plist.template  installer_requirements.plist  package_component.plist.template
macos/RustDspInProcessDemo/RustDspInProcessDemo/: RustDspInProcessDemo.entitlements  RustDspInProcessDemoApp.swift
macos/RustDspInProcessDemo/RustDspInProcessDemo.xcodeproj/: project.pbxproj
macos/RustDspInProcessDemo/RustDspInProcessDemo/Model/: AudioUnitHostModel.swift
macos/RustDspInProcessDemo/RustDspInProcessDemoExtension/: Info.plist
macos/RustDspInProcessDemo/RustDspInProcessDemoExtension/Common/: RustDspInProcessDemoExtension-Bridging-Header.h
macos/RustDspInProcessDemo/RustDspInProcessDemoExtension/DSP/: RustDspInProcessDemoExtensionDSPKernel.hpp
macos/RustDspInProcessDemo/RustDspInProcessFramework/: DummySource.swift  RustDspInProcessFramework.h  mock_dsp.modulemap  mock_dsp_private.modulemap
macos/RustDspPlainDemo/RustDspPlainDemo/: RustDspPlainDemoApp.swift
macos/RustDspPlainDemo/RustDspPlainDemo.xcodeproj/: project.pbxproj
macos/RustDspPlainDemo/RustDspPlainDemo/Model/: AudioUnitHostModel.swift
macos/RustDspPlainDemo/RustDspPlainDemoExtension/: Info.plist
(+26 files in other folders)
